--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=simulacro_prueba_desempeño
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_01_spring
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password="Rlwi2023.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Configuraciones de JPA
